fix layout shift for font

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -15,3 +15,11 @@
   src: url('../fonts/DINWebPro-BoldW01Regular.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
+
+
+/* fallback font for din (normal - 400) */
+@font-face {
+  font-family: "din-normal-400-fallback";
+  size-adjust: 101.7%;
+  src: local("Arial");
+}
